syntax = "proto2";
package net;

enum Protocol {
  Net = 0;
  RouteSrv = 1;
  SessionSrv = 2;
  OriginSrv = 3;
  JobSrv = 4;
}

enum ErrCode {
  // Generic
  BUG = 0;
  TIMEOUT = 1;
  REMOTE_REJECTED = 2;
  BAD_REMOTE_REPLY = 3;
  ENTITY_NOT_FOUND = 4;
  NO_SHARD = 6;
  ACCESS_DENIED = 7;
  SESSION_EXPIRED = 8;
  ENTITY_CONFLICT = 9;
  SOCK = 10;
  DATA_STORE = 11;
  BAD_TOKEN = 12;
  REMOTE_UNAVAILABLE = 13;
  SYS = 14;

  // Worker
  WORKSPACE_SETUP = 1000;
  SECRET_KEY_FETCH = 1001;
  SECRET_KEY_IMPORT = 1002;
  VCS_CLONE = 1003;
  BUILD = 1004;
  POST_PROCESSOR = 1005;
  INVALID_INTEGRATIONS = 1006;

  // RouteSrv
  REG_CONFLICT = 2000;
  REG_NOT_FOUND = 2001;

  // Scheduler
  GROUP_NOT_COMPLETE = 3000;
  PARTIAL_JOB_GROUP_PROMOTE = 3001;
}

message Header {
  optional string message_id = 1;
  optional bool route_info = 2;
  optional bool txn = 3;
}

message RouteInfo {
  optional Protocol protocol = 1;
  optional uint64 hash = 2;
}

message Txn {
  optional uint64 id = 1;
  optional bool complete = 2;
}

message NetError {
  optional ErrCode code = 1;
  optional string msg = 2;
}

message NetOk {}
